VDR Plugin 'xineliboutput' Revision History
-------------------------------------------

????-??-??: Version 1.1.0

- Added support for yaepg(hd) video window with HUD OSD (Thanks to grueni75)
- Fixed lot of compiler warnings (Thanks to Winfried Koehler)
- Fixed mixer volume being reset at vdr-sxfe start when using software volume control
  (Thanks to Juergen Lock)
- New, smoother live mode SCR sync algorithm (Thanks to Dirk Brenken)
- Added support for libextractor 0.6.0 API (Thanks to Martin Knoll)
- Scale or re-position SD subtitles on HD OSD (Thanks to Rolf Ahrenberg)
- Added an option to select subtitle OSD scaling or re-positioning
- Use xineliboutput/allowed_hosts.conf instead of svdrphosts.conf
- Implemented demuxer with mpeg-ts support
- Initial support for vdr-1.7.15
- Support for multilayer OSD
- Improved OSD scaling (OSD reacts now immediately to frame size changes)
- Replaced cIConv with VDR's cCharConv.
- Supports only for vdr-1.6.0 or later.
- Added an option to limit number of remote clients
- Implemented build-time configuration script
- Added an option to adjust the stepping value that is used for
  metronom live mode sync (Thanks to Andreas Auras)
- Fixed aspect ratio problems when using ffmpeg mpeg2 decoder
- H.264 updates
- Added an option to use xine-lib DVB subtitles decoder
- Fixed generating LIRC key release events (bug #2919256) (Thanks to Claudius Peschke)
- Added vdr-??fe option to configure (client) system shutdown

- Fixed VDR OSD when playing DVDs
- Added Chinese translations (Thanks to NanFeng)
- Added Estonian translations (Thanks to Arthur Konovalov)
- Added Ukrainian translations (Thanks to Yarema aka Knedlyk)
- Configurable media player menu
- Added "Rewind" key to media files menu
- Added DVD menu navigation keys option
- Added support for BluRay and m2ts files
- Added --terminal, --buffers and --geometry options to vdr-??fe
- Updated logo (Thanks to Stefan Wagner)